hphp/test/zend/good/error_003.php
<?php

interface abc { 
}

class A {
	use abc;
}

?>