hphp/test/zend/bad/zend/class_alias_009.php
<?php

interface a { }

class_alias('a', 'b');

interface c extends a, b { }

?>